# calculator

./: .gitignore  0001-fix-truncation-error.patch  0002-formatting-use-tabs-instead-of-spaces.patch  CMakeLists.txt  Makefile  build.ninja  calculator.cpp  calculator.h  rules.ninja
